--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ node_js:
   - '7'
 
 install:
-  - npm install -g jison
-  - npm install -g babel-cli
-  - npm install -g babel-preset-es2015
-  - npm install -g uglifyjs
+  - npm install jison
+  - npm install babel-cli
+  - npm install babel-preset-es2015
+  - npm install uglifyjs
 
 script:
   - ./build.sh
