--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ install:
   - npm install jison
   - npm install babel-cli
   - npm install babel-preset-es2015
-  - npm install uglifyjs
+  - npm install uglify-js
 
 script:
   - ./build.sh
