--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
       "run-sequence": "^1.1.5",
       "babel-register": "^6.5.2",
       "babel-preset-es2015": "^6.5.0",
+      "babel-preset-env": "^1.6.0",
       "gulp": "^3.9.1",
       "gulp-babel": "^7.0.0",
       "gulp-clean-css": "^3.7.0",
